feat: add css style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <div class="img"><img src="18.jpg" alt="Darya"></div>
     <h1>Darya Tsybureukina</h1>
     <p>Beginer JS/Front-end developer</p>
   </header>
@@ -16,8 +17,8 @@
     <h2>Personal info</h2>
     <div>Location: Wroclaw, Polan</div>
     <div>Phone: +48 792597951</div>
-    <div>cyburevkina96@mail.ru</div>
-    <div>daryatsyb</div>
+    <div>Mail: cyburevkina96@mail.ru</div>
+    <div>GitHub: daryatsyb</div>
     <div><a href="https://t.me/Darya_Tsybureukina">Darya_Tsybureukina</a></div>
   </section>
   <section>
