--- a/index.html
+++ b/index.html
@@ -5,63 +5,123 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/icons-font/style-font.css">
   <title>CV</title>
 </head>
 <body>
   <header>
-    <div class="img"><img src="18.jpg" alt="Darya"></div>
-    <h1>Darya Tsybureukina</h1>
-    <p>Beginer JS/Front-end developer</p>
+    <nav>
+      <div class="container">
+        <ul class="menu">
+          <li><a href="#resume">About me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">My projects</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#languages">Languages</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
-  <section class="contacts">
-    <h2>Personal info</h2>
-    <div>Location: Wroclaw, Polan</div>
-    <div>Phone: +48 792597951</div>
-    <div>Mail: cyburevkina96@mail.ru</div>
-    <div>GitHub: daryatsyb</div>
-    <div><a href="https://t.me/Darya_Tsybureukina">Darya_Tsybureukina</a></div>
+  <section class="main">
+    <div class="container">
+      <div class="promo">
+        <div class="promo__content">
+          <h1 class="promo__title">Darya Tsybureukina</h1>
+          <div class="promo__descr" >Front-End Developer</div>
+        </div>
+        <div class="promo__img"><img src="assets/img/darya.jpg" alt="Darya"></div>
+      </div>
+      <div id="contacts" class="contacts">
+        <ul class="contacts__list">
+          <li class="contacts__item"><span class="icon-location"></span> Wroclaw, Poland</li>
+          <li class="contacts__item"><span class="icon-phone"></span><a href="tel:+48792597951">+48 792-597-951</a></li>
+          <li class="contacts__item"><span class="icon-envelop"></span><a href="mailto:cyburevkina96@mail.ru">cyburevkina96@mail.ru</a> </li>
+          <li class="contacts__item"><span class="icon-github"></span><a href="https://github.com/daryatsyb">daryatsyb</a></li>
+          <li class="contacts__item"><span class="icon-telegram"></span><a href="https://t.me/Darya_Tsybureukina">Darya_Tsybureukina</a></li>
+        </ul>
+      </div>
+    </div>
   </section>
-  <section>
-    <h2>About me</h2>
-    <div>I first became acquainted with development in my second year at university, when I was studying to be an economist. Then I developed my first simple website. Since then I graduated and have been working in my profession for 2 years, but the thought of development did not leave me all these years. That's why I'm here on the rs.school course.</div>
+  <section id="resume">
+    <div class="container">
+      <h2>About me</h2>
+      <div class="resume__text">I first became acquainted with development in my second year at university, when I was studying to be an economist. Then I developed my first simple website. Since then I graduated and have been working in my profession for 2 years, but the thought of development did not leave me all these years. That's why I'm here on the rs.school course.</div>
+    </div>
   </section>
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS/SASS</li>
-      <li>Bootstrap</li>
-      <li>VS Code</li>
-      <li>Git, GitHub</li>
-      <li>Adobe Photoshop, Figma</li>
-    </ul>
+  <section id="skills">
+    <div class="container">
+      <h2>Skills</h2>
+      <ul class="skills__list">
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>JavaScript</li>
+        <li>SASS</li>
+        <li>Bootstrap</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Adobe Photoshop</li>
+        <li>Figma</li>
+      </ul>
+    </div>
   </section>
-  <section>
-    <h2>Work experience</h2>
-    <div>I don't have experience in companies.
-      But here are two of my works made during the training courses:</div>
-    <ul>
-      <li><a href="https://daryatsyb.github.io/pulse/">RunSmart</a></li>
-      <li><a href="https://daryatsyb.github.io/uber/">Uber</a></li>
-    </ul>
+  <section id="projects">
+    <div class="container">
+      <h2>My projects</h2>
+        <div class="projects__wrap">
+          <div class="projects__item">
+            <div class="projects__screen">
+              <a href="https://daryatsyb.github.io/pulse/"><img class="projects__img" src="assets/img/screen-pulse.jpg" alt="RunSmart"></a>
+            </div>
+            <a class="projects__link" href="https://daryatsyb.github.io/pulse/">RunSmart</a>
+          </div>
+          <div class="projects__item">
+            <div class="projects__screen">
+              <a href="https://daryatsyb.github.io/uber/"><img class="projects__img" src="assets/img/screen-uber.jpg" alt="Uber"></a>
+            </div>
+            <a class="projects__link" href="https://daryatsyb.github.io/uber/">Uber</a>
+          </div>
+        </div>
+    </div>
   </section>
-  <section>
-    <h2>Education</h2>
-    <ul>
-      <li>2014-2018 - Economist, Belarusian State University of Transport</li>
-      <li>2018-2019 - Master of Economics and Management, Belarusian State University of Transport</li>
-    </ul>
-    <h3>Some courses:</h3>
-    <ul>
-      <li>WEB Developer 2022, [Udemy.com](https://www.udemy.com/) (in process...)</li>
-      <li>JS/Front-end developer, [RS.SCHOOL](https://rs.school/) (in process...)</li>
-    </ul>
+  <section id="education" class="education">
+    <div class="container">
+      <h2>Education</h2>
+      <div class="education__wrap">
+        <div class="education__date">2014-2018</div>
+        <div class="education__place">Economist, Belarusian State University of Transport</div>
+      </div>
+      <div class="education__wrap">
+        <div class="education__date">2018-2019</div>
+        <div class="education__place">Master of Economics and Management, Belarusian State University of Transport</div>
+      </div>
+      <h3>Some courses:</h3>
+      <div class="education__wrap">
+        <div class="education__date">2022 (in progress)</div>
+        <div class="education__place">WEB Developer 2022, <a href="https://www.udemy.com/">Udemy.com</a></div>
+      </div>
+      <div class="education__wrap">
+        <div class="education__date">2022  (in progress)</div>
+        <div class="education__place">JS/Front-end developer, <a href="https://rs.school/">RS.SCHOOL</a></div>
+      </div>
+    </div>
   </section>
-  <section>
-    <h2>Languages</h2>
-    <div>English - A2</div>
-    <div>Russian - Native</div>
-    <div>Polish - Basic</div>
+  <section id="languages">
+    <div class="container">
+      <h2>Languages</h2>
+      <div class="languages__list">
+        <div class="languages__item">English - Elementary</div>
+        <div class="languages__item">Polish - Pre-Intermediate</div>
+        <div class="languages__item">Germany - Elementary</div>
+        <div class="languages__item">Russian - Native</div>
+      </div>
+    </div>
   </section>
+  <footer>
+    <div class="container footer">
+      <div>&copy; 2022</div>
+      <a class="footer__github" href="https://github.com/daryatsyb"><span class="icon-github"></span> My GitHub</a>
+      <a class="footer__rsschool" href="https://rs.school/js/"><img src="assets/icons/rs_school_js.svg" alt=""></a>
+    </div>
+  </footer>
 </body>
 </html>
